# mirror

./: CODEOWNERS  README.md  extra_model_paths.yaml.example  main.py  node_helpers.py  nodes.py  pyproject.toml  requirements.txt  server.py
.ci/update_windows/: update.py
.ci/windows_base_files/: README_VERY_IMPORTANT.txt  run_nvidia_gpu_fast_fp16_accumulation.bat
.github/ISSUE_TEMPLATE/: bug-report.yml  user-support.yml
.github/workflows/: release.yml  stable-release.yml  test-ci.yml  test-launch.yml  test-workflows-windows-custom.yaml  test-workflows-with-manual-input.yaml  update-frontend.yml  update-version.yml  windows_release_dependencies.yml  windows_release_nightly_pytorch.yml  windows_release_package.yml  workflows-matrix-test.yaml
api_server/routes/internal/: internal_routes.py
app/: frontend_management.py
comfy/: cli_args.py  controlnet.py  hooks.py  lora.py  model_base.py  model_management.py  model_patcher.py  ops.py  supported_models_base.py  utils.py
comfy/comfy_types/: node_typing.py
comfy/ldm/cascade/: common.py  stage_b.py  stage_c.py
comfy/ldm/genmo/joint_model/: asymm_models_joint.py  layers.py
comfy/ldm/hunyuan3d/: vae.py
comfy_api_nodes/apis/: client.py
comfy_execution/: graph_utils.py
comfy_extras/: nodes_audio.py  nodes_hunyuan3d.py  nodes_images.py  nodes_lora_extract.py  nodes_mask.py  nodes_model_merging.py  nodes_pag.py  nodes_stable_cascade.py  nodes_video.py
notebooks/: comfyui_colab.ipynb
script_examples/: basic_api_example.py  websockets_api_example.py
tests/inference/: test_execution.py
