[project]
name = "Hanzo Studio"
version = "0.3.29"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[project.urls]
homepage = "https://hanzo.ai/"
repository = "https://github.com/hanzoai/studio"
documentation = "https://docs.hanzo.ai/"

[tool.ruff]
lint.select = [
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb"]
